[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
byteorder = "1.4.3"
bytes = "1.4.0"
clap = { version = "4.3.4", features = ["derive"] }
dotenv = "0.15.0"
ethers = { version = "2.0.7", features = ["ws"] }
futures = "0.3.28"
once_cell = "1.18.0"
reqwest = "0.11.18"
rmp-serde = "1.1.1"
serde = "1.0.164"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
