[tool.poetry]
name = "blockpipe-engine-python"
version = "0.1.0"
description = ""
authors = ["Sorawit Suriyakarn <swit@blockpipe.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
eth-abi = "^4.1.0"
eth-utils = "^2.1.1"
pycryptodome = "^3.18.0"
fastapi = "^0.97.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
